# golang-bazel-monorepo

./: BUILD.bazel  README.md  deps.bzl  go.work  go.work.sum
apps/app-one/: BUILD.bazel  go.mod  go.sum  main.go
apps/app-one/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
apps/app-two/: BUILD.bazel  go.mod  go.sum  main.go
apps/app-two/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
apps/swagger/: package.json
apps/swagger/src/: App.tsx
