load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app-one_lib",
    srcs = ["main.go"],
    importpath = "github.com/wissensalt/golang-bazel-monorepo/apps/app-one",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/app-one/docs",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_swaggo_http_swagger//:http-swagger",
    ],
)

go_binary(
    name = "app-one",
    embed = [":app-one_lib"],
    visibility = ["//visibility:public"],
)
