load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app-two_lib",
    srcs = ["main.go"],
    importpath = "github.com/wissensalt/golang-bazel-monorepo/apps/app-two",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/app-two/docs",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_cors//:cors",
        "@com_github_swaggo_http_swagger//:http-swagger",
    ],
)

go_binary(
    name = "app-two",
    embed = [":app-two_lib"],
    visibility = ["//visibility:public"],
)
